k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - host: dev-frontend.trainwithprajot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-frontend-service
            port:
              number: 3000

  - host: dev-backend.trainwithprajot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-backend-service
            port:
              number: 3000
